--- a/pos_frontend/src/index.css
+++ b/pos_frontend/src/index.css
@@ -27,3 +27,15 @@ body {
   height: 50px;
   animation: spin 1s linear infinite;
 }
+
+@layer utilities {
+  .no-spinner::-webkit-outer-spin-button,
+  .no-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  .no-spinner {
+    -moz-appearance: textfield;
+  }
+}
